fixed .Wrap height

--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -1,5 +1,5 @@
 .Wrap {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   position: relative;
   flex-flow: column;
